--- a/index.html
+++ b/index.html
@@ -191,16 +191,11 @@
 
                 <div class="box">
                     <h3>our services</h3>
-                    <a href="#"><i class="fas fa-chevron-right"></i>bookmark
-                        extension</a>
-                    <a href="#"><i class="fas fa-chevron-right"></i>chrome
-                        themes</a>
-                    <a href="#"><i class="fas fa-chevron-right"></i>firefox
-                        themes</a>
-                    <a href="#"><i class="fas fa-chevron-right"></i>screen
-                        recorder extension</a>
-                    <a href="#"><i class="fas fa-chevron-right"></i>screen shot
-                        extension</a>
+                    <a href="#"><i class="fas fa-chevron-right"></i></a>
+                    <a href="#"><i class="fas fa-chevron-right"></i></a>
+                    <a href="#"><i class="fas fa-chevron-right"></i></a>
+                    <a href="#"><i class="fas fa-chevron-right"></i></a>
+                    <a href="#"><i class="fas fa-chevron-right"></i></a>
                 </div>
 
                 <div class="box">
