--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
 
                 <div class="box">
                     <h3>contact info</h3>
-                    <a href="#"><i class="fas fa-phone"></i>+91 99129-50728</a>
-                    <a href="#"><i class="fas fa-phone"></i>+91 81434-46628</a>
+                    <a href=""tel: +919848046628"><i class="fas fa-phone"></i>+91 98480-46628</a>
+                    <a href=""tel: +918143446628""><i class="fas fa-phone"></i>+91 81434-46628</a>
                     <a href="mailto: technofire101@yahoo.com"><i
                             class="fas fa-envelope"></i>technofire101@yahoo.com</a>
                     <a href="mailto: technofire103@yahoo.com"><i
