--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#features">Features</a>
                 <a href="#download">Location</a>
                 <a href="#footer">Contact</a>
-                <a href="#" class="btn">Our Products</a>
+                <a href="/Products.html" class="btn">Our Products</a>
             </nav>
 
             <div class="fas fa-bars" id="menu-btn"></div>
