--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <a href="#features">Features</a>
                 <a href="#download">Location</a>
                 <a href="#footer">Contact</a>
+                <a href="#Clients">Clients</a>
                 <a href="/Products.html" class="btn">Our Products</a>
             </nav>
 
@@ -76,7 +77,8 @@
                 <div class="content">
                     <h1>Feel Safe in one click</h1>
                     <p>Experience peace of mind with us. With just one click,
-                        ensure <br>top-notch fire safety for your home or business.</p>
+                        ensure <br>top-notch fire safety for your home or
+                        business.</p>
                     <a
                         href="https://www.justdial.com/jdmart/Vijayawada/Techno-Enterprises-Ring-Road-Ring-Road/0866PX866-X866-111022164442-M5G3_BZDET/catalogue?ref=auto&searchfrom=auto|home&trkid=6103325764"
                         class="all-btn">more info</a>
@@ -87,8 +89,8 @@
                 <!-- 2 Tab  -->
                 <div class="content">
                     <h1>Efficient & Reliable service</h1>
-                    <p>Count on us for efficient & reliable service—<br>ensuring 
-                        your safety with prompt, professional, and effective 
+                    <p>Count on us for efficient & reliable service—<br>ensuring
+                        your safety with prompt, professional, and effective
                         fire prevention and protection solutions.</p>
                     <a
                         href="https://www.justdial.com/jdmart/Vijayawada/Techno-Enterprises-Ring-Road-Ring-Road/0866PX866-X866-111022164442-M5G3_BZDET/catalogue?ref=auto&searchfrom=auto|home&trkid=6103325764"
@@ -101,7 +103,7 @@
                 </div>
 
                 <!-- 2 Tab  -->
-<!--    
+                <!--    
     <div class="image">
         <img src="images/illustration-features-tab-3.svg"
         alt="illustration-features-tab-3">
@@ -160,6 +162,37 @@
                 </div>
             </div>
         </section>
+        <section class="Clients" id="Clients">
+            <div class="heading">
+                <h1>Our Clients</h1>
+                <img src="images/ITC_Limited_Logo.svg"
+                    alt="logo-firefox" width="80" height="80">
+                <img src="images/GAIL.svg"
+                    alt="logo-firefox" width="80" height="80">
+                <img src="images/godfrey-phillips-india-limited-logo.png"
+                    alt="logo-firefox" width="80" height="80">
+                <img src="images/AP-Transco.png"
+                    alt="logo-firefox" width="80" height="80">
+                <img src="images/HAL.png"
+                    alt="logo-firefox" width="125" height="80">
+                <img src="images/SCR.jpg"
+                    alt="logo-firefox" width="90" height="80">
+                <img src="images/3F-logo-1.png.webp"
+                    alt="logo-firefox" width="125" height="80">
+                <img src="images/state-bank-of-india-logo.svg"
+                    alt="logo-firefox" width="80" height="80">
+                <img src="images/union-bank-of-india.svg"
+                    alt="logo-firefox" width="80" height="80">
+                <img src="images/LIC-logo.svg"
+                    alt="logo-firefox" width="80" height="80">
+                <img src="images/kcp_logo.png"
+                    alt="logo-firefox" width="80" height="80">
+                <img src="images/zuari-cement-logo-vector-xs.png"
+                    alt="logo-firefox" width="190" height="80">
+                <img src="images/SSS.jpg"
+                    alt="logo-firefox" width="300" height="80">
+            </div>
+        </section>
 
         <!-- downloads section ends -->
 
@@ -176,21 +209,34 @@
                             class="fas fa-chevron-right"></i>location</a>
                     <a href="#footer"><i
                             class="fas fa-chevron-right"></i>contact</a>
+                    <a href="#Clients"><i
+                            class="fas fa-chevron-right"></i>Clients</a>
                 </div>
 
                 <div class="box">
                     <h3>our services</h3>
-                    <a href="#"><i class="fas fa-chevron-right"></i></a>
-                    <a href="#"><i class="fas fa-chevron-right"></i></a>
-                    <a href="#"><i class="fas fa-chevron-right"></i></a>
-                    <a href="#"><i class="fas fa-chevron-right"></i></a>
-                    <a href="#"><i class="fas fa-chevron-right"></i></a>
+                    <a href="#"><i class="fas fa-chevron-right"></i>Service
+                        1</a>
+                    <a href="#"><i class="fas fa-chevron-right"></i>Service
+                        2</a>
+                    <a href="#"><i class="fas fa-chevron-right"></i>Service
+                        3</a>
+                    <a href="#"><i class="fas fa-chevron-right"></i>Service
+                        4</a>
+                    <a href="#"><i class="fas fa-chevron-right"></i>Service
+                        5</a>
                 </div>
 
                 <div class="box">
                     <h3>contact info</h3>
-                    <a href="tel: +919848046628"><i class="fas fa-phone"></i>+91 98480-46628</a>
-                    <a href="tel: +918143446628"><i class="fas fa-phone"></i>+91 81434-46628</a>
+                    <a href="tel: +919912950728"><i class="fas fa-phone"></i>+91
+                        98480-46628</a>
+                    <a href="tel: +919912950728"><i class="fas fa-phone"></i>+91
+                        99129-50728</a>
+                    <a href="tel: +918143446628"><i class="fas fa-phone"></i>+91
+                        81434-46628</a>
+                    <a href="tel: +918143446628"><i
+                            class="fas fa-phone"></i>0866-2485428</a>
                     <a href="mailto: technofire101@yahoo.com"><i
                             class="fas fa-envelope"></i>technofire101@yahoo.com</a>
                     <a href="mailto: technofire103@yahoo.com"><i
