--- a/Products.html
+++ b/Products.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <div
             class="header-inner d-flex justify-content-between align-items-center">
-            <a class="navbar-brand flex-shrink-0" href="#"><img
+            <a class="navbar-brand flex-shrink-0" href="/index.html"><img
                 src="/images/logo-bookmark1.svg"
                 alt="logo-image" class="img-fluid" width="75px">
               Techno Enterprises</a>
