--- a/Products.html
+++ b/Products.html
@@ -12,7 +12,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
-    <script defer src="main.js"></script>
+    <script defer src="/js/products.js"></script>
     <title>Products</title>
   </head>
   <body class="light-theme dark-theme">
